@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-04T08:15:02Z",
-  "count_outdated" : 374,
-  "uniques_outdated" : 202,
-  "count" : 397,
-  "uniques" : 216,
+  "timestamp" : "2022-07-05T01:01:43Z",
+  "count_outdated" : 376,
+  "uniques_outdated" : 203,
+  "count" : 399,
+  "uniques" : 217,
   "clones" : [
-    {
-      "timestamp": "2022-06-20T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-21T00:00:00Z",
       "count": 1,
@@ -93,6 +86,13 @@
       "timestamp": "2022-07-03T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-04T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
